infrastructure/base/aspire/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: aspire
spec:
  parentRefs:
    - name: gateway-api
      namespace: istio-ingress
  hostnames:
    - aspire.tools.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: aspire
          namespace: monitor
          port: 80
